bootstrap/argocd/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd
  namespace: argocd
spec:
  host: argocd.apps.ocp4.hkn.lab
  port:
    targetPort: https
  # tls:
  #   insecureEdgeTerminationPolicy: Redirect
  #   termination: reencrypt
  to:
    kind: Service
    name: argocd-server
    weight: 100
  wildcardPolicy: None
